fixing x shape and nav z-indexe

--- a/css/home.css
+++ b/css/home.css
@@ -90,7 +90,7 @@ a {
   top: 10vh;
   right: -100%;
   width: 100%;
-  z-index: 3;
+  z-index: 100;
   height: 90vh;
   transition: right 0.3s ease;
 }
@@ -114,18 +114,7 @@ a {
 }
 
 #hamburger-toggle:checked + .hamburger .hamburger__line:nth-child(1) {
-  transform: rotate(45deg) translate(0.3rem, 0.4rem);
-}
-
-#hamburger-toggle:checked + .hamburger .hamburger__line:nth-child(2) {
-  opacity: 0;
-}
-
-#hamburger-toggle:checked
-  + #hamburger-toggle:checked
-  + .hamburger
-  .hamburger__line:nth-child(1) {
-  transform: rotate(45deg) translate(0.3rem, 0.4rem);
+  transform: rotate(45deg) translate(6px, 7px);
 }
 
 #hamburger-toggle:checked + .hamburger .hamburger__line:nth-child(2) {
@@ -133,7 +122,23 @@ a {
 }
 
 #hamburger-toggle:checked + .hamburger .hamburger__line:nth-child(3) {
-  transform: rotate(-45deg) translate(0.3rem, -0.4rem);
+  transform: rotate(-45deg) translate(6px, -7px);
+}
+
+.hamburger {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 22px;
+  width: 22px;
+}
+
+.hamburger__line {
+  background-color: #fff;
+  width: 100%;
+  height: 2px;
+  transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
 #hamburger-toggle:checked ~ .nav {
@@ -151,6 +156,7 @@ a {
   overflow: hidden;
   background: transparent;
   text-align: center;
+  z-index: 0;
 }
 
 #bg-video {
